--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -18193,3 +18193,34 @@ h5.texti {
 /* //single blog pagination */
 
 /*# sourceMappingURL=style-freedom.css.map */
+
+/* Estilos del loader */
+#loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 1s ease-out;  /* Transición suave para ocultar el loader */
+}
+
+#logo-loader {
+  width: 100px; /* Ajusta el tamaño según tu preferencia */
+  animation: girar 2s linear infinite;
+}
+
+/* Animación para hacer girar el logo */
+@keyframes girar {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+/* Ocultar el contenido mientras carga */
+#contenido {
+  opacity: 0;  /* Comienza oculto */
+  transition: opacity 1s ease-in;  /* Transición suave para mostrar el contenido */
+  visibility: hidden;  /* Oculto inicialmente */
+}
