--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -15314,8 +15314,8 @@ button.search-btn:hover {
 
   .navbar-expand-lg .navbar-nav .nav-item.active .nav-link,
   .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: var(--primary-color);
-    border-bottom: 1px solid var(--primary-color);
+    color: var(--secondary-color);
+    border-bottom: 1px solid var(--secondary-color);
   }
 }
 
@@ -15445,7 +15445,7 @@ button.search-btn:hover {
 .btn-style-white-dw:hover{
   background: #ffffff;
   border: 2px solid #ffffff;
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .btn-style-border:hover {
@@ -15491,6 +15491,16 @@ button.search-btn:hover {
   color: var(--primary-color);
 }
 
+.btn-style-primary-dw {
+  background: var(--primary-color);
+  border-color: var(--primary-color);
+  color: #fff;
+}
+
+.btn-style-primary-dw:hover {
+  background: transparent;
+  color: var(--secondary-color);
+}
 /* //button style */
 /* title style */
 .title-style {
